# Wc3Stats

./: CMakeLists.txt  README.md
Data/: Units_by_map-appearance_frequency_fraction_extended.txt  quantitative_results.txt  quantitative_results2.txt  quantitative_results_v2.txt  quantitative_results_v2_2.txt  quantitative_results_v3.txt  results.txt  stats.txt  test.data  test1.data  test2.data
Local/: database.cpp  database.h  pack.cpp  preprocess.cpp  serialization.cpp  serialization.h  test.cpp  test.txt
Local/serialization/: pack.cpp  serialization.cpp  serialization.h
